# midiconn

./: .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE.txt  README.md  build.bat  cog.toml  justfile  vcpkg.json
.github/workflows/: ci.yml
cmake/: EmbedBinaryFile.cmake
data/graphics/: mc_banner.xcf
data/packaging/: wix_patch.xml  xyz.safeworlds.midiconn.metainfo.xml  xyz.safeworlds.midiconn.yml
docs/: BUILD.md
inc/: Application.hpp  ApplicationName.hpp  Commands.hpp  ConfigFile.hpp  DisconnectedMidiInNode.hpp  DisconnectedMidiOutNode.hpp  DisconnectedNode.hpp  ErrorHandler.hpp  InputObserver.hpp  KeyboardShortcutAggregator.hpp  KeyboardShotcutAggregator.hpp  Licenses.hpp  MidiBuffer.hpp  MidiChannelNode.hpp  MidiEngine.hpp  MidiInNode.hpp  MidiInfo.hpp  MidiMessageView.hpp  MidiNodeObserver.hpp  MidiOutNode.hpp  MidiPortWatchdog.hpp  MidiProbe.hpp  Node.hpp  NodeEditor.hpp  NodeFactory.hpp  NodeObserver.hpp  NodeSerializer.hpp  OutputObserver.hpp  PlatformUtils.hpp  PortNameDisplay.hpp  PresetManager.hpp  ResourceLoader.hpp  Theme.hpp  UpdateChecker.hpp  Utils.hpp  Version.hpp.in  WelcomeWindow.hpp
packaging/: midi-connector.yml  midi_connector.yml  midiconn.yml  wix_patch.xml  xyz.safeworlds.midi-connector.yml  xyz.safeworlds.midi_connector.desktop  xyz.safeworlds.midi_connector.metainfo.xml  xyz.safeworlds.midiconn.desktop  xyz.safeworlds.midiconn.metainfo.xml  xyz.safeworlds.midiconn.mime.xml  xyz.safeworlds.midiconn.yml
po/: hu.po  midiconn.pot
src/: ActivityIndicator.cpp  ActivityIndicator.hpp  Application.cpp  Application.hpp  ApplicationName.hpp  ConfigFile.cpp  ConfigFile.hpp  DisconnectedMidiInNode.cpp  DisconnectedMidiInNode.hpp  DisconnectedMidiOutNode.cpp  DisconnectedNode.hpp  ImGuiUtils.hpp  InputObserver.cpp  Intl.hpp  KeyboardShortcutAggregator.cpp  Licenses.cpp  Licenses.hpp  Locale.cpp  Locale.hpp  LogNode.cpp  LogNode.hpp  MidiChannelNode.cpp  MidiChannelNode.hpp  MidiEngine.cpp  MidiInNode.cpp  MidiInNode.hpp  MidiNodeObserver.cpp  MidiOutNode.cpp  MidiOutNode.hpp  MidiPortWatchdog.cpp  MidiPortWatchdog.hpp  MidiProbe.cpp  Node.cpp  Node.hpp  NodeEditor.cpp  NodeEditor.hpp  NodeFactory.cpp  NodeFactory.hpp  NodeObserver.cpp  NodeSerializer.cpp  (+23 more)
src/midi/: CMakeLists.txt  ChannelMap.cpp  ChannelMap.hpp  ChannelMapNode.cpp  ChannelMapNode.hpp  GraphObserver.cpp  GraphObserver.hpp  InputNode.cpp  InputNode.hpp  MessageTypeMask.hpp  MessageView.hpp  MidiEngine.cpp  MidiEngine.hpp  MidiGraph.cpp  MidiGraph.hpp  MidiMessageView.hpp  MidiProbe.cpp  MidiProbe.hpp  Note.hpp  OutputNode.cpp  OutputNode.hpp  OutputObserver.cpp  OutputObserver.hpp
